--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>21 Ways to talk to Someone at Coinbase via Phone, Email or Chat Options: A Step-by-Step Guide</title>
+  <title>Coinbase Official Support: Immediataly Contact to A Live Person: 46 Ways Customer Service Guide</title>
   <meta name="description" content="How to Contact Coinbase Customer Service 1-902-482-8091. You can reach Coinbase’s customer service hotline by dialing the number OTA: (+1-902-482-8091) provided on their website.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <style>
