--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </head>
 <body>
   <header>
-    <h1>How to Talk to a Live Person at Coinbase</h1>
+    <h1>Coinbase Official Support: Immediataly Contact to A Live Person: 46 Ways Customer Service Guide</h1>
     <p>Call Now for 24/7 Customer Assistance</p>
     <a href="tel:1-902-482-8091" class="phone-cta">1-902-482-8091</a>
   </header>
